<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">


    <TextView
        android:id="@+id/label_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_address"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="12dp"
        />

    <EditText
        android:id="@+id/address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/address"
        app:layout_constraintStart_toEndOf="@id/label_address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@id/label_address"
        android:layout_marginTop="12dp"/>

    <Button
        android:id="@+id/info_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/info"
        app:layout_constraintTop_toBottomOf="@id/address"
        android:layout_marginTop="12dp"/>

    <TextView
        android:id="@+id/label_size"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/label_size"
        app:layout_constraintTop_toBottomOf="@id/info_button"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="12dp"
        />

    <TextView
        android:id="@+id/size"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/init"
        android:gravity="center"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/info_button"
        app:layout_constraintStart_toEndOf="@id/label_size"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp"
        />

    <TextView
        android:id="@+id/label_type"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/label_type"
        app:layout_constraintTop_toBottomOf="@id/label_size"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="12dp"
        />

    <TextView
        android:id="@+id/type"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/init"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/label_type"
        app:layout_constraintTop_toBottomOf="@id/label_size"
        android:layout_marginTop="12dp"/>

    <Button
        android:id="@+id/file_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/file"
        app:layout_constraintTop_toBottomOf="@id/label_type"
        android:layout_marginTop="12dp"/>

    <TextView
        android:id="@+id/label_bytes"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/label_bytes"
        app:layout_constraintTop_toBottomOf="@id/file_button"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="12dp"
        />

    <TextView
        android:id="@+id/bytes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/init"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/label_bytes"
        app:layout_constraintTop_toBottomOf="@id/file_button"
        android:layout_marginTop="12dp"/>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="100"
        android:progress="0"
        app:layout_constraintTop_toBottomOf="@id/bytes"
        app:layout_constraintStart_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>